# LiveVox-Engine

./: .gitignore  CMakeLists.txt  README.md  todo.txt
src/: main.cpp
src/Components/Core/: Color4.hpp  Transform.hpp  Vector2f.hpp
src/Components/Rendering/: CircleShape.hpp  RectangleShape.hpp  Sprite.hpp
src/Systems/: RenderManager.hpp
